<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/created_at"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/created_time"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/percentage"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/percentage"
                android:gravity="center"
                android:textColor="#919191"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/progress_"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/progress"
                android:gravity="center"
                android:textColor="#919191"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/succeeded__"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/succeeded"
                android:gravity="center"
                android:textColor="#919191"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/failed__"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/failed"
                android:gravity="center"
                android:textColor="#919191"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/punishment"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/punishment"
                android:gravity="center"
                android:textColor="#919191"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/achieved_at"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/achieved_time"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/archived_at"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/archived_time"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:text="@string/lasted_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lasted_time"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</android.support.v4.widget.NestedScrollView>