<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_marginBottom="7dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:text="@string/created_at"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/created_time"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp">

                <TextView
                    android:text="@string/achieved_at"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/achieved_time"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp">

                <TextView
                    android:text="@string/archived_at"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/archived_time"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp">

                <TextView
                    android:text="@string/lasted_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lasted_time"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/color_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#555555" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>