<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_marginBottom="7dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:text="@string/created_at"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/created_time"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp">

                <TextView
                    android:text="@string/existed_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/existed_time"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <ToggleButton
            android:id="@+id/status_toggle_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/toggle_button_background"
            android:textColor="#ffffff"
            android:textOff="@string/unachieved"
            android:textOn="@string/achieved"
            android:textSize="18sp" />

        <com.onecivilization.Optimize.CustomView.GridColorPickerView
            android:id="@+id/color_picker"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:numColumns="4"
            android:verticalSpacing="8dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>